--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samhax-Tech | Cyberpunk Web Designer & AI Specialist</title>
+    <title>Ripper Samhax</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -888,7 +888,7 @@
                 <a href="https://t.me/Samhax_official" class="social-btn telegram" target="_blank">
                     <i class="fab fa-telegram"></i> Telegram
                 </a>
-                <a href="#" class="social-btn discord" target="_blank">
+                <a href="https://discord.gg/cs4W3DNDdU" class="social-btn discord" target="_blank">
                     <i class="fab fa-discord"></i> Discord
                 </a>
             </div>
@@ -902,7 +902,7 @@
         
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Muhammad Hamza, known as Samhax online. I provide professional web design, bot development, and hosting services. I combine creativity and technical skills to build engaging websites and efficient bots, supported by reliable hosting.</p>
+            <p>Hello! I'm Hamza, known as Samhax online. I provide professional web design, bot development, and hosting services. I combine creativity and technical skills to build engaging websites and efficient bots, supported by reliable hosting.</p>
             <p>My expertise focuses on delivering tailored web experiences, developing intelligent automation solutions, and offering dependable hosting to ensure optimal online performance.</p>
             
             <div class="stats-grid">
@@ -1079,7 +1079,6 @@
 
         <footer>
             <p>&copy; 2025 Samhax-Tech. All rights reserved.</p>
-            <p>Built with ❤️ and &lt;/&gt;</p>
         </footer>
     </div>
 
