--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script src="https://pl28413508.effectivegatecpm.com/7d/15/5d/7d155d8505802437d606ffaf64354717.js"></script>
+    <script>
+  atOptions = {
+    'key' : '97b5f80944bff57e32b1873e3c77bdc1',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/97b5f80944bff57e32b1873e3c77bdc1/invoke.js"></script>
+    <script src="https://pl28295801.effectivegatecpm.com/3a/21/37/3a2137aa42e8aa45edd0488e22b599ec.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5362367099647360"
      crossorigin="anonymous"></script>
